# gnome-battery-threshold

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  XIAOMI_SETUP.md  battery-threshold-backend.py  build.sh  com.Korrnals.battery-threshold.policy  extension.js  install-xiaomi.sh  metadata.json  prefs.js  stylesheet.css
.github/workflows/: build.yml
battery-thresholdd/: Cargo.toml  battery-threshold-xiaomi.service  battery-threshold.service
battery-thresholdd/src/: main.rs
data/dbus/: io.github.korrnals.BatteryThreshold.conf  io.github.korrnals.BatteryThreshold.service
data/policy/: io.github.korrnals.BatteryThreshold.policy
data/rpm/: acpi_call-kmod.spec
data/schemas/: gschemas.compiled  io.github.korrnals.BatteryThreshold.gschema.xml
data/systemd/: acpi_call-rebuild.service.in  battery-thresholdd.service
docs/: ADDING_VENDORS.md  ARCHITECTURE.md  DEVELOPMENT.md  INSTALL.md
docs/adr/: ADR-0001-acpi-call-atomic-fedora.md
docs/vendors/: xiaomi.md
schemas/: org.gnome.shell.extensions.battery-threshold.gschema.xml
scripts/: install.sh  probe.sh
src/daemon/: Cargo.toml  battery.rs  dbus_service.rs  error.rs  main.rs  state.rs
src/daemon/vendors/: mod.rs  sysfs.rs  thinkpad.rs  xiaomi.rs
src/extension/: extension.js  metadata.json  prefs.js  stylesheet.css
