[package]
name = "battery-thresholdd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
zbus = { version = "3.0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
nix = "0.26.0"

[[bin]]
name = "battery-thresholdd"
path = "src/main.rs"